# authub

./: .gitignore  LICENSE  README.md  pyproject.toml
dbschema/: base.esdl  default.esdl  github.esdl  google.esdl  oauth2.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql
src/authub/: asgi.py  cli.py  config.py  http.py  models.py  oauth2.py  orm.py  user.py
src/authub/idp/: base.py  github.py  google.py
