[tool.poetry]
name = "authub"
version = "0.1.0"
description = "Authentication hub."
authors = ["Fantix King <fantix.king@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
pydantic = {version = "^1.8", extras = ["dotenv"]}
typer = "^0.3.2"
edgedb = "^0.13.0"

gunicorn = {version = "^20.0.4", optional = true}
uvicorn = {version = "^0.13.4", optional = true, extras = ["standard"]}

[tool.poetry.extras]
standalone = ["uvicorn", "gunicorn"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.plugins."authub.http"]
idp_base = "authub.idp.base:router"

[tool.poetry.plugins."authub.modules"]
default = "authub.models"

[tool.poetry.plugins."authub.idps"]
google = "authub.idp.google:idp"

[tool.poetry.scripts]
authub = "authub.cli:app"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
